After Library name change

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
-Package: googleautocomplete
-Version: 0.1.3
+Package: gautocompleter
+Version: 0.1.1
 Date: 2016-08-07
 Title: Google Auto Complete
 Author: Abhinav Yedla, Dr.Shawn Dorius
